--- a/src/components/ActionItem/ActionItem.css
+++ b/src/components/ActionItem/ActionItem.css
@@ -6,8 +6,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  cursor: pointer;
   opacity: 0;
-  pointer-events: none;
   transform: translate(0, 0) scale(0);
   transition: opacity 0.4s ease,
     transform 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
@@ -15,7 +15,6 @@
 
 .fa-item.open {
   opacity: 1;
-  pointer-events: auto;
   transform: var(--target) scale(1);
 }
 
